--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.26.1",
+    "immutable": "^3.8.1",
     "react": "^15.4.2",
     "react-day-picker": "^3.1.1",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.1",
+    "react-select": "^1.0.0-rc.2",
     "redux": "^3.6.0",
     "style-loader": "^0.13.1"
   }
